# face-detection

./: .gitignore  CMakeLists.txt  ViolaJones.cpp  ViolaJones.h  main.cpp  templateMatching.cpp  templateMatching.h
face-detection/: Source.cpp  ViolaJones.h  templateMatching.cpp
face-recognition/: Source.cpp  ViolaJones.cpp  templateMatching.cpp  templateMatching.h
